# self-training

./: .gitmodules
CPP/Chat Room/: README.md  client.cpp  database.db  server.cpp  tcp_socket.cpp  tcp_socket.h
CPP/ChatRoom/: CMakeLists.txt  Client  README.md  Server  database.cpp  database.db  database.h  server.cpp  socket.cpp  socket.h
CPP/ChatRoom/autotest/: auto_login.exp  client_autotest.sh
CPP/ChatRoom/lib/inc/: database.h  socket.h  socket_client.h  socket_server.h
CPP/ChatRoom/lib/src/: database.cpp  socket.cpp  socket_client.cpp  socket_server.cpp
CPP/ChatRoom/src/: client.cpp  server.cpp
CPP/System Monitor/: README.md
Chat Room/: CMakeLists.txt
ChatRoom/: CMakeLists.txt  database.db
ChatRoom/autotest/: client_autotest.sh
ChatRoom/lib/inc/: database.h  socket_server.h
ChatRoom/lib/src/: database.cpp  socket_client.cpp  socket_server.cpp
ChatRoom/src/: client.cpp  server.cpp
Concurrent Traffic Simulation/: CMakeLists.txt  README.md
Concurrent Traffic Simulation/src/: Intersection.cpp  TrafficLight.cpp  TrafficSimulator-Final.cpp
Device Driver/: README.md
Device Driver/eink/: Makefile  eink.c  eink.h  eink_overlay.dts  eink_spi.c
Device Driver/pocket_geiger/: Makefile  pocket_geiger.c  pocket_geiger_overlay.dts  test.py
Route Planning/src/: main.cpp
System Monitor/: CMakeLists.txt
System Monitor/include/: format.h  linux_parser.h  ncurses_display.h  process.h  processor.h  system.h
System Monitor/src/: format.cpp  linux_parser.cpp  main.cpp  ncurses_display.cpp  process.cpp  processor.cpp  system.cpp
(+2 files in other folders)
